THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.15.2
- FIX: Resolve issue with not hiding underscored patterns.
- THX: Thanks @ivancamilov for reporting this regression.
- FIX: Fix misapplied error input class
- THX: Thanks @johngerome for the pull request!
- ADD: Added a note in the README during installation to run with elevated privileges
- THX: Thanks @RichardBray for the heads up
- ADD: Added a Prerequisites section to the README

PL-node-v0.15.1
- FIX: Resolve issue with styleModifiers not being replaced when the partial has spaces in it.
- ADD: Support multiple styleModifier classes using the | pipe syntax
- FIX: Resolve issue with styleModifiers not being applied correctly when mixed with pattern parameters
- THX: Thanks @theorise for the issue reports!

PL-node-v0.15.0
- CHG: Updated package.json devDependencies for Node 4.X and 5.X support.
- CHG: Updated package.gulp.json devDependencies for Node 4.X and 5.X support.

PL-node-v0.14.0
- ADD: Support for style modifiers
- ADD: Support for styleGuideExcludes
- THX: Thanks to @bramsmulders for the styleGuideExcludes pull request and @illepic for the original headsup
- FIX: Fix an issue where listitem blocks would only render if the pattern containing the block had a partial within it

PL-node-v0.13.1
- FIX: Allow verbose partials for list items
- THX: Thanks @e2tha-e

PL-node-v0.13.0
- FIX: Cleanup an old file and an incorrect entry in the .gitignore file
- CHG: Change order of pattern addition and ~variant pattern addition so they build naturally in the menu.
- THX: Thanks @e2tha-e for the flurry of pull requests!
- CHG: Update data merge function to prioritize handle pattern~variant.json files
- THX: Thanks @e2tha-e for finding, fixing, and unit testing the data merge issue.
- ADD: Support for recursive partial inclusion
- THX: Thanks @e2tha-e for making pattern inclusion a lot more robust. Great work!!!
- FIX: Improvements to style guide menu generation and capitalization.
