@@ -4,6 +4,7 @@ public/index.html
 public/styleguide.html
 public/styleguide/html/styleguide.html
 public/css/*
+public/data/*
 public/fonts/*
 public/js/*
 public/images/*
