@@ -290,6 +290,7 @@
 			//arrange
 			var fs = require('fs-extra');
 			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
 
 			var pl = {};
 			pl.config = {};
@@ -297,7 +298,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
-			var patterns_dir = './test/files/_patterns';
+			pl.config.patterns = { source: patterns_dir};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -322,6 +323,7 @@
 			//arrange
 			var fs = require('fs-extra');
 			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
 
 			var pl = {};
 			pl.config = {};
@@ -329,7 +331,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
-			var patterns_dir = './test/files/_patterns';
+			pl.config.patterns = { source: patterns_dir};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -354,6 +356,7 @@
 			//arrange
 			var fs = require('fs-extra');
 			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
 
 			var pl = {};
 			pl.config = {};
@@ -361,7 +364,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
-			var patterns_dir = './test/files/_patterns';
+			pl.config.patterns = { source: patterns_dir};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -386,6 +389,7 @@
 			//arrange
 			var fs = require('fs-extra');
 			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
 
 			var pl = {};
 			pl.config = {};
@@ -393,7 +397,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
-			var patterns_dir = './test/files/_patterns';
+			pl.config.patterns = { source: patterns_dir};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -420,6 +424,7 @@
 			//arrange
 			var fs = require('fs-extra');
 			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
 
 			var pl = {};
 			pl.config = {};
@@ -427,7 +432,7 @@
 			pl.data.link = {};
 			pl.config.debug = false;
 			pl.patterns = [];
-			var patterns_dir = './test/files/_patterns';
+			pl.config.patterns = { source: patterns_dir};
 
 			var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
 			atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
@@ -499,6 +504,57 @@
 				}
 			}
 			test.equals(foundIgnoredPattern, false);
+			test.done();
+		},
+		'processPatternIterative - ignores files that are variants' : function(test){
+			//arrange
+			var diveSync = require('diveSync');
+			var fs = require('fs-extra');
+			var pa = require('../builder/pattern_assembler');
+			var pattern_assembler = new pa();
+			var patterns_dir = './test/files/_patterns';
+			var patternlab = {};
+			patternlab.config = fs.readJSONSync('./config.json');
+			patternlab.config.patterns = {source: patterns_dir};
+			patternlab.data = fs.readJSONSync('./source/_data/data.json');
+			patternlab.listitems = fs.readJSONSync('./source/_data/listitems.json');
+			patternlab.header = fs.readFileSync('./source/_patternlab-files/pattern-header-footer/header.html', 'utf8');
+			patternlab.footer = fs.readFileSync('./source/_patternlab-files/pattern-header-footer/footer.html', 'utf8');
+			patternlab.patterns = [];
+			patternlab.data.link = {};
+			patternlab.partials = {};
+
+			//act
+			diveSync(patterns_dir,
+				{
+					filter: function(path, dir){
+						if(dir){
+							var remainingPath = path.replace(patterns_dir, '');
+							var isValidPath = remainingPath.indexOf('/_') === -1;
+							return isValidPath;
+						}
+						return true;
+					}
+				},
+				function(err, file){
+					//log any errors
+					if(err){
+						console.log(err);
+						return;
+					}
+
+					pattern_assembler.process_pattern_iterative(file.substring(2), patternlab);
+				}
+			);
+
+			//assert
+			var foundVariant = false;
+			for(var i = 0; i < patternlab.patterns.length; i++){
+				if(patternlab.patterns[i].fileName.indexOf('~') > -1){
+					foundVariant = true;
+				}
+			}
+			test.equals(foundVariant, false);
 			test.done();
 		},
 		'setState - applies any patternState matching the pattern' : function(test){
