@@ -1,6 +1,6 @@
 THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
-PL-node-v0.15.2
+PL-node-v0.16.0
 - FIX: Resolve issue with not hiding underscored patterns.
 - THX: Thanks @ivancamilov for reporting this regression.
 - FIX: Fix misapplied error input class
@@ -8,6 +8,9 @@ PL-node-v0.15.2
 - ADD: Added a note in the README during installation to run with elevated privileges
 - THX: Thanks @RichardBray for the heads up
 - ADD: Added a Prerequisites section to the README
+- ADD: Added unit tests for pattern states and pseudopatterns
+- CHG: Changed pseudopattern generation to use config.patterns.source directory instead of hardcode
+- CHG: Explicitly sorting patterns by name prior to building the UI
 
 PL-node-v0.15.1
 - FIX: Resolve issue with styleModifiers not being replaced when the partial has spaces in it.
